# huaan-command

./: .env.example  .eslintrc.cjs  .git-viz-summary.txt  .gitignore  .huaan-terminal-init  .prettierrc  .projectstructure  AI_AGENT_MODE.md  AI_API_DESIGN.md  AI_FEATURES.md  AI_IMPLEMENTATION_CHECKLIST.md  AI_PROVIDERS_GUIDE.md  AI_QUICK_START.md  AI_TERMINAL_INTEGRATION.md  BUGFIX_AI_TERMINAL.md  BUILD.md  CHANGELOG.md  CHECK_FEATURES.md  CLAUDE_CODE_CONFIG_SUMMARY.md  CLAUDE_CONFIG_INVENTORY.md  CLAUDE_CONFIG_PARAMETER_FIX.md  CLAUDE_CONFIG_SWITCH_FIX.md  CONTRIBUTING.md  DATA_PERSISTENCE.md  DEBUG_PANEL_GUIDE.md  DEVELOPMENT_GUIDE.md  DYNAMIC_MODELS.md  DYNAMIC_MODELS_V2.md  Dockerfile  FEATURES.md  FEATURES_COMPLETE.md  FINAL_RELEASE_CHECKLIST_V1.2.1.md  GIT_COMMAND_FIX_REPORT.md  ICON_UPDATE.md  INSTALL.md  NEW_FEATURES.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_SUMMARY.md  PACKAGE_SUMMARY.md  PERFORMANCE_ANALYSIS.md  (+28 more)
.husky/: pre-commit
docs/: GIT_INTEGRATION_GUIDE.md  GIT_VISUALIZATION.md  GIT_VISUALIZATION_COMPLETION_REPORT.md  GIT_VISUALIZATION_TUTORIAL.md  GIT_WORKFLOW.md  README.md
scripts/: run.sh
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_config.rs  lib.rs  main.rs  task.rs  terminal.rs
src-tauri/src/commands/: executor.rs  filesystem.rs  mod.rs
swict-claude-code/: .npmignore  ARCHITECTURE.md  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  FIX_CONFIG.md  GETTING_STARTED.md  PROJECT_INFO.md  QUICK_TEST.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_UPGRADE.md  TESTING.md  (+7 more)
(+168 files in other folders)
